--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -90,7 +90,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         with:
-          tag_name: linux-${{ github.ref }}
+          tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }} - Linux
           draft: false
           prerelease: false
