feat: updated CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Install dependencies (Ubuntu)
         working-directory: ${{ runner.workspace }}
-        if: ${{ matrix.config.name == "Ubuntu" }}
+        if: ${{ matrix.config.name == 'Ubuntu' }}
         run: |
           sudo apt-get -y install libxrandr-dev
           sudo apt-get -y install libgl1-mesa-dev
@@ -86,7 +86,7 @@ jobs:
 
       - name: Build library & tests (Windows)
         working-directory: ${{ runner.workspace }}/build
-        if: ${{ matrix.config.name == "Windows" }}
+        if: ${{ matrix.config.name == 'Windows' }}
         run: |
           cmake --build . --config "Release" --parallel 4
           mkdir Cubiks_Bundle
@@ -99,7 +99,7 @@ jobs:
 
       - name: Build library & tests (Ubuntu)
         working-directory: ${{ runner.workspace }}/build
-        if: ${{ matrix.config.name == "Ubuntu" }}
+        if: ${{ matrix.config.name == 'Ubuntu' }}
         run: |
           cmake --build . --config "${{matrix.configs}}" --parallel 4
           mkdir Cubiks_Linux_${{matrix.configs}}
@@ -113,7 +113,7 @@ jobs:
 
       - name: Build library & tests (MacOS)
         working-directory: ${{ runner.workspace }}/build
-        if: ${{ matrix.config.name == "MacOS" }}
+        if: ${{ matrix.config.name == 'MacOS' }}
         run: |
           cmake --build . --config "${{matrix.configs}}" --parallel 4
           mkdir Cubiks_MacOS_${{matrix.configs}}
@@ -127,21 +127,21 @@ jobs:
 
       - name: Run tests
         working-directory: ${{ runner.workspace }}/build
-        if: ${{ matrix.config.name == "Windows" }}
+        if: ${{ matrix.config.name == 'Windows' }}
         run: .\\Release\\CubiksTests.exe
 
       - name: Run tests
         working-directory: ${{ runner.workspace }}/build
-        if: ${{ matrix.config.name != "Windows" }}
+        if: ${{ matrix.config.name != 'Windows' }}
         run: ./CubiksTests
 
       - name: Setup Valgrind
-        if: ${{ matrix.config.name == "Ubuntu" }}
+        if: ${{ matrix.config.name == 'Ubuntu' }}
         run: sudo apt-get install -y valgrind
 
       - name: Check memory leaks
         working-directory: ${{ runner.workspace }}/build
-        if: ${{ matrix.config.name == "Ubuntu" }}
+        if: ${{ matrix.config.name == 'Ubuntu' }}
         run: valgrind --leak-check=full --error-exitcode=1 ./CubiksTests
 
       - name: Packing artifacts
