feat: updated CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,6 +156,7 @@ jobs:
 
   release:
     name: Release
+    if: contains(github.ref, 'tags/v')
     runs-on: ubuntu-latest
     needs: build
     steps:
